# erp-wms-cli

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  client.rs  config.rs  context.rs  error.rs  main.rs  output.rs  util.rs
src/commands/: alert.rs  auth.rs  config.rs  dev.rs  health.rs  inbound.rs  inventory.rs  item.rs  location.rs  mod.rs  order.rs  report.rs  tenant.rs  user.rs
tests/integration/: README.md  run.sh  seed-user.mjs
tests/scenarios/: README.md  all.sh  gen-fixtures.mjs  integrity.sh  lib.sh  reporting.sh  run.sh  security.sh  warehouse.sh
